*Empty MediaWiki Message*

--- a/Astanababa_aramgähi.mw
+++ b/Astanababa_aramgähi.mw
@@ -5,4 +5,4 @@ ASTANABABA TÜRBESI
 Astanababa türbesi birnäçe bölekden ybaratdyr. Ol açyk dälizden, howlujykdan, peştagdan, ýapyk dälizden, dört pilonly zaldan, metjitden, Zeýdalynyň we Züweýdalynyň guburhanasyndan, diwanhanadan we Gyzlarbibi mawzoleýi bilen birikdirýän insiz dälizden ybarat. Ansamblyň iň gadymy bölegi metjitdir we ony XII asyr bilen senelemek bolar. Diwanhana hem metjit bilen bir wagtda gurlupdyr. Gyzlarbibi mazoleýi ansamblyň has giçki bölegidir, ol dürli ölçegdäki ähtimal ikinji gezek peýdalanylýan kerpiçlerden (XIX asyrda) bina edilipdir.
 [[Category:Lebap]]
 [[Category:Taryh]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
