*Empty MediaWiki Message*

--- a/Gadymy_Merwiň_galalary.mw
+++ b/Gadymy_Merwiň_galalary.mw
@@ -27,4 +27,4 @@ Galanyň içiniň demirgazyk hem-de deirgazyk-günbatar böleklerinde kazarmalar
 
 [[Category:Mary]]
 [[Category:Taryh]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
