*Empty MediaWiki Message*

--- a/Daýahatyn_kerwensaraýy.mw
+++ b/Daýahatyn_kerwensaraýy.mw
@@ -4,4 +4,4 @@
 Amuldan Horezme gidýän orta asyr ýolunyň ugrunda, Türkmenabatdan 170 km demirgazyk-günbatarda, Darganata etrabynda ýerleşýär.
 [[Category:Lebap]]
 [[Category:Taryh]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
