*Empty MediaWiki Message*

--- a/Mary:Uly_Gyzgala_we_Kiçi_Gyzgala.mw
+++ b/Mary:Uly_Gyzgala_we_Kiçi_Gyzgala.mw
@@ -11,5 +11,5 @@ Gyzlar köşgi göwrümi boýunça Ýigitler köşgünden ep-esli uludyr. Onuň 
 
 Göwrümi boýunça Gyzlar köşgünden has kiçi bolan Ýigitler köşgüniň hem gurluşyk prinsipleri şu aýdylanlara köp babatda gabat gelýär. Onuň hersinde egme gasynlaryň 12-si bolan gapdal diwarlarynyň ölçegi dört tarapda-da 20 metre golaýlaýar. Gurluşyk üçin esasan 35×35×5,7-8 sm. ölçegdäki çig kerpiçler ulanylypdyr. Kiçi Gyzgala öň ýüzünde ýarym togalak, ýarym silindirik gofry bolan we 8-10 metre çenli belentligini saklan monumental köşkdür. Halk arasynda oňa Ýigit gala hem diýilýär.
 [[Category:Taryh]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
 [[Category:Mary]]
