*Empty MediaWiki Message*

--- a/Muhammet_ibn_Zeýdiň_kümmeti.mw
+++ b/Muhammet_ibn_Zeýdiň_kümmeti.mw
@@ -7,4 +7,4 @@ Soň-soňlar kümmet gümmezi bilen birlikde ençeme gezek üýtgedilip gurlupdy
 Bildiriş: Muhammet dälde "MUHAMMED" haýyş etýäris unutmaň!!!
 [[Category:Taryh]]
 [[Category:Mary]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
