*Empty MediaWiki Message*

--- a/Sahaba_guburhanalary.mw
+++ b/Sahaba_guburhanalary.mw
@@ -5,4 +5,4 @@ Sahabalar (ashablar) ýagny [[Muhammet pygamber]]iň ýoldaşlary we “baýdak 
 Beýikligi 10 metrden aşýan peştaglaryň ikisi-de forma babatda birmeňzeş bolup, olar esasan 25×25×5 sm. ölçegdäki bişen kerpiçlerden salnypdyr. Hiç hili ýaşaýyş jaý ýa-da beýleki jaý roluny ýerine ýetirmeýän bu ymaratlaryň hersiniň ortasynda ýokary çürelip gidýän ýeke-täk uly arka bar.Eýwanlaryň arhitekturasy meňzeş we olar Teýmiritler döwletiniň paýtaht arhitekturasynyň ýetiren özboluşly täsirini görkezýär. Iki sany gabyrüsti daşdaky ýazgylarda Bureýdanyň we Gigarynyň şahslaryna degişli käbir maglumatlar berlipdir.
 [[Category:Mary]]
 [[Category:Taryh]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
