*Empty MediaWiki Message*

--- a/Soltan_Sanjar_mowzeleýi.mw
+++ b/Soltan_Sanjar_mowzeleýi.mw
@@ -12,4 +12,4 @@ Türkmenistanyň arhitekturasynda Soltan Sanjaryň mawzoleýi deňsiz-taýsyz wa
 Soltan Sanjaryň mawzoleýiniň salynmagy barada halk arasynda saklanyp galan birnäçe rowaýatlar bolup, olaryň birinde şeýle diýilýär: “Sanjar asman perisi bilen söýşüpdir. Feri oňa özi bilen durmuş gurjak bolsa üç şertini bitirmelidigini aýdan. Olaryň biri periniň saçyny daraýşyna seretmeli däl, ikinjisi ylgan wagty onuň söbügine seretmeli däl, üçünjisi hem ferini bilinden gujaklamaly däl eken. Bilesigeliji soltan şertleri birbada kabul etse-de, soňra olaryň üçüsini hem bozupdyr. Ol periniň saçyny daranda kellesini eline alyp daraýandygyny, ylganda söbüginiň ýere degmeýändigini synlapdyr, gujaklanda hem biliniň süňksüzdigini bilipdir. Şertleriň bozulanyna dergazap bolan perizat ak guşa öwrülip, asmana galypdyr. Soltan Sanjar gözüni ýaşlap, onuň yzyndan:”Men seni görüp durmasam ölerin” diýip gygyran. Perizat asmanda fel-felläp durşuna:”-Meni görjek bolsaň beýik hem owadan ymarat saldyr. Men her anna güni şol ymaratyň depesindäki deşikden saňa gararyn”-diýipdir-de uçup gidipdir. Şondan soňra Soltan Sanjar şu mawzoleýi saldyranmyşyn...”.
 [[Category:Taryh]]
 [[Category:Mary]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
