*Empty MediaWiki Message*

--- a/Änew_metjidiniň_ansambly.mw
+++ b/Änew_metjidiniň_ansambly.mw
@@ -25,5 +25,5 @@ Bu metjidiň gurluşygy hakda ýerli ilatyň arasynda ur döwürlerden bäri şe
 
 Ertesi şäheriň ilatyny ýene-de jaňyň sesi oýadypdyr. Olar galadan çykanlarynda iki aždarhany hem görüpdirler, ol aždarhalar köp altyn we gymmatbahaly daşlary alyp gelen ekenler. Olar bu zatlary patyşa aýalyň öňünde goýup, özleri ýene daga tarap gidipdirler. Jamal bu gymmatbaha zatlardan uly metjit gurmagy we onuň peştagynda şu zatlary beren aždarhalaryň şekilini çekmegi buýrupdyr. Rowaýatda aždarhalar Änewiň ilatyna hossarlyk eden jandarlar hökmünde görkezilýär, olaryň şekili bolsa ýykylan metjidiň ýüzündäki ýazgyda atlandyrylyşy ýaly “Gözellik öýüni” gorap saklapdyrlar.”
 [[Category:Ahal]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
 [[Category:Taryh]]
