*Empty MediaWiki Message*

--- a/Ýartygümmez_kümmeti.mw
+++ b/Ýartygümmez_kümmeti.mw
@@ -5,4 +5,4 @@ Sarahs harabaçylygynyň 7-8 kilometrlik günorta we günorat-gündogar tarapynd
 Sungaty öwreniji G.A. Pugaçenkowa bu kümmeti Samanynyň berýän maglumatyna görä (XII asyrda) Sarahsyň golaýynda jaýlanan şeýh Ahmet al-Hadyny guburhanasydyr diýip çaklaýar.
 [[Category:Ahal]]
 [[Category:Taryh]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
