*Empty MediaWiki Message*

--- a/Şirbekir_kümmeti.mw
+++ b/Şirbekir_kümmeti.mw
@@ -16,4 +16,4 @@ Köp gezek edilen rejeleýiş işleri we üýtgedip gurmalar desganyň ilkibaşd
 
 Arap syýahatçysy Al-Makdisi (X asyr) “agaç sütünleriň üstünde” duran, uly ‘öhrat gazanan köne metjit hakynda aýdanda, belki şu ýadygärligi göz öňünde tutandyr.
 [[Category:Taryh]]
-[[Category:Yadygarlikler]]
+[[Kategoriýa:Ýadygärlikler]]
