*Empty MediaWiki Message*

--- a/Burkina-Faso.mw
+++ b/Burkina-Faso.mw
@@ -1,3 +1,63 @@
+{{Infobox Country
+|native_name              = Burkina Faso
+|common_name              = Burkina Faso
+|image_flag               = Flag of Burkina Faso.svg
+|image_coat               = Burkina Faso COA.png
+|national_motto           = ''"Unité, Progrès, Justice"''{{spaces|2}}<small>([[fransuzça]])<br/>"Agzybirlik, Ösüş, Adalat"</small>
+|image_map                = LocationBurkinaFaso.svg
+|national_anthem          = ''[[Une Seule Nuit]]''{{spaces|2}}<small>([[fransuzça]])<br/>''Ýeke-täk gije'' – Thomas Sankara''</small>
+|official_languages       = [[Fransuz dili]]
+|regional_languages       = [[Moore dili]], [[Diýula dili]] ([[Bamana dili]]) 
+|demonym                  = burkina fasoly
+|capital                  = [[Uagadugu]]
+|latd=12 |latm=20 |latNS=N |longd=1 |longm=40 |longEW=W
+|largest_city             = paýtagt
+|government_type          = [[Ýarym prezident respublikasy]]
+|leader_title1            = [[Prezident]]
+|leader_name1             = [[Blaise Compaoré]]
+|sovereignty_type         = [[Garaşsyzlyk]]
+|sovereignty_note         = [[Fransiýa]]dan
+|established_event1       = Sene
+|established_date1        = 5 awgust, 1960
+|area_km2                     = 274,000
+|area_sq_mi                  = 105,792 <!--Do not remove per [[WP:MOSNUM]]-->
+|area_rank                = 74-nji
+|area_magnitude           = 1 E11
+|percent_water            = 0.1%
+|population_estimate      = 15,757,000
+|population_estimate_year = 2009
+|population_estimate_rank = 66-njy
+|population_census        = 10,312,669
+|population_census_year   = 1996
+|population_density_km2   = 57.5
+|population_density_sq_mi = 148.9 <!--Do not remove per [[WP:MOSNUM]]-->
+|population_density_rank  = 145-nji
+|GDP_PPP_year             = 2008
+|GDP_PPP                  = $17.802 milliard
+|GDP_PPP_rank             = 
+|GDP_PPP_per_capita       = $1,267
+|GDP_PPP_per_capita_rank  = 
+|GDP_nominal              = $8.116 milliard
+|GDP_nominal_year         = 2008
+|GDP_nominal_per_capita   = $578
+|HDI_year                 = 2007
+|HDI                      = {{increase}} 0.372
+|HDI_rank                 = 173rd
+|HDI_category             = <span style="color:#e0584e;">pes</span>
+|Gini                     = 39.5
+|Gini_year                = 2003
+|Gini_category            = <span style="color:#fc0;">ortaça</span>
+|currency                 = [[KFA franky]]
+|currency_code            = XOF
+|time_zone                = 
+|utc_offset               = +0
+|time_zone_DST            = bellenilmeýär
+|utc_offset_DST           =
+|drives_on                    = sag 
+|cctld                    = [[.bf]]
+|calling_code             = 226
+}}
+
 '''Burkina Faso''' Günbatar Afrikada ýerleşýän döwlet. 
 
 {{Afrikada ýerleşýän ýurtlar}}
