*Empty MediaWiki Message*

--- a/Aba_serdaryň_gozgalaňy.mw
+++ b/Aba_serdaryň_gozgalaňy.mw
@@ -1,1 +1,3 @@
-#REDIRECT [[Aba Serdaryň gozgalaňy]]
+'''[[Aba serdar]]yň gozgalaňy''' - 16 asyryň ortalarynda [[Etrek]] we [[Gürgen]] türkmenleriniň [[Astrabat]] häkimleriniň zulumyna garşy gozgalaňy. 16 asyrda Etrek we Gürgen derýalarynyň aşak akymynda, Astrabat welaýatynyň demirgazyk regionlarynda ekerançylyk we ýarym çarwaçylyk bilen meşgyllanýan türkmen (gökleň, okly, emreli we beýleki) taýpalary ýaşapdyrlar. Olar Hywa hanlygynyň raýaty hökmünde Horezm soltanlaryna agyr salgyt (pul, mal we nöker) töläpdirler hem-de Eýranyň ýerli (Astrabat) häkimiýetileri tarapyndan gysylyp, talanyp gelipdirler. 1550-nji ýylda Astrabatdyň täze häkimi Keçel Şahberdiniň türkmenlerden agyr paç ýygnamaga synanşmagy zerarly gozgalaň başlanypdyr. Okly taýpasynyň kethudasy Aba Serdaryň baştutanlygy astyndaky gozgalaňçylar Keçel Şahberdiniň garyndaşy, gözegçilik we salgyt ýygnamak üçin goýlan Şatyr begi öldüripdirler. Gahar-gazaba münen Keçel Şahberdi goşun çekip baranda, okly türkmenleri onuň goşunyny derbi-dagyn edip, özüni hem öldüripdirler. Şondan soň gozgalaň bütin türkmen obalaryny gurşap alypdyr we Astrabadyň käbir beýleki reýonlaryna hem aralaşypdyr. Bu ýerlerdäki Eýran çinownikleri gaçyp gitmäge mejbur bolupdyrlar. Eýran şasy Tahmasp şanyň (1524-78) uly goşun iberip, Aba Serdar gozgalaňyny ýatyrmak üçin eden birnäçe synanşygy başa barmandyr. Aba Serdar Eýran bilen ozaldan hem urşup gelen Ürgenç we Durun welaýatlarynyň hökümdary Aly soltan bilen ylalaşmak baglaşypdyr we onuň galapyn özbeklerden ybarat bolan goşunyna daýanyp, 1554-58 ýyllaryň dowamynda birnäçe agyr söweşler edip, ajaýyp ýeňişler gazanypdyr. Türkmen atly goşunynyň şöhratly serkerdesi Aba Serdaryň dabarasy çar töwerege ýaýrapdyr. Bütin kenarýaka türkmenleri 10-12 ýylyň dowamynda Eýran häkimiýetlerine garaşsyz diýen ýaly bolupdyrlar.  Gozgalaňy güýç bilen ýatyrmak başartmansoň, gajar feodallary Aba Serdaryň janyna haýynçylykly kast etmäge girişipdirler. Aba Serdar ukyda ýatyrka, gapy hyzmatkäri, asly eýranly bir adam tarapyndan öldürilipdir. Onuň kellesi Astrabat häkimine sowgat hökmünde getirilip berilipdir. Şondan soň gozgalaň kem-kemden ýatyşypdyr. Aba Serdar gozgalaňynyň uly taryhy ähmiýeti bolupdyr. Ol gozgalaň şowsuz gutarsa-da, türkmenleriň uly syýasy güýç hökmünde, öz azatlygy we özbaşdaklygy ugrynda keseki ýurt geodal ezijilerine garşy göreşmäge ukyplydygyny görkezipdir. Gozgalaň ýatyşandan soň hem birentek wagtlap Astrabat ülkesinde türkmenleriň täsiri güýçli bolupdyr. Eýran çinownikleri olaryň içerki işine gatyşyp hem-de salgyt salyp bilmändirler.
+
+[[Category: Taryh]]
