*Empty MediaWiki Message*

--- a/Ähtimallyk_teoriýasy.mw
+++ b/Ähtimallyk_teoriýasy.mw
@@ -1,6 +1,6 @@
-Ahtimallyk Teoriyasy durmuşda bölup geçyan wakalaryn ahtimallaryny hasaplayar. [[Fizika]]'da we [[Ykdysadyyet]]'de ulanylyar.
+'''Ahtimallyk teoriýasy''' [[matematika]]nyň tötänleýin hadysalaryň ähtimallygyny analiz edýän bölümi. 
 
-[[Category:Matematika]]
+[[Kategoriýa:Matematika]]
 
 [[af:Waarskynlikheidsleer]]
 [[ar:نظرية الاحتمالات]]
