*Empty MediaWiki Message*

--- a/Ähtimallyk_teoriýasy.mw
+++ b/Ähtimallyk_teoriýasy.mw
@@ -1,4 +1,4 @@
-'''Ahtimallyk teoriýasy''' [[matematika]]nyň tötänleýin hadysalaryň ähtimallygyny analiz edýän bölümi. 
+'''Ähtimallyk teoriýasy''' [[matematika]]nyň tötänleýin hadysalaryň ähtimallygyny analiz edýän bölümi. 
 
 [[Kategoriýa:Matematika]]
 
