--- a/Şalom.mw
+++ b/Şalom.mw
@@ -1,5 +1,18 @@
 '''Şalom''' ([[İvrit dili]]: שָׁלוֹם, [[Türkmen dili]]: Parahatçylyk) — [[Stambul]], [[Türkiýe]]de neşir edilýän bir [[gazet]].
 
+*Tirajy: 5000
+*Formaty: Tabloid
+*Sahypa sanlary: 24
+*Dili: [[Türk dili]] ve [[Ladino dili]]
+*Gazetin neşir günü: Çarşenbe
+*Gurulan ýyly: [[29 oktýabr]] [[1947]]
+*Neşirýat: Gözlem Gazetecilik Basın ve Yayın A.Ş.
+*Ýerleşýän ýeri: Atiye Sokak, Polar Apt. No 12/6, 34204 Teşvikiye, [[Stambul]], [[Türkiýe]]
+*Esaslandyryjy: Avram Leyon
+*Baş redaktory: İvo Molinas
+*Redaktory: Yakup Barokas
+*Saýty: [http://www.salom.com.tr/ www.salom.com.tr]
+
 == Çykgytlar ==
 * [http://www.salom.com.tr Şalom (Türk dili)]
 ** [http://www.salom.com.tr/news/list/category/19-Judeo-Espanyol.aspx Şalom (Ladino dili)] 
