--- a/Şalom.mw
+++ b/Şalom.mw
@@ -15,7 +15,7 @@
 
 == Çykgytlar ==
 * [http://www.salom.com.tr Şalom (Türk dili)]
-** [http://www.salom.com.tr/news/list/category/19-Judeo-Espanyol.aspx Şalom (Ladino dili)] 
+* [http://www.salom.com.tr/news/list/category/19-Judeo-Espanyol.aspx Şalom (Ladino dili)] 
 
 [[Kategoriýa:Gazetler]]
 
