/* Adamzat 21-nji asyra çenli ýaşap bilmez */

--- a/Kompýuter_Tehnologiýasy.mw
+++ b/Kompýuter_Tehnologiýasy.mw
@@ -1,5 +1,6 @@
 
-== Adamzat 21-nji asyra çenli ýaşap bilmez ==
+----
+[[Link title]]== Adamzat 21-nji asyra çenli ýaşap bilmez ==
 
 
 Amerikanyň Birleşen Ştatlaryň harby merkezi bolan Pentogondaky işleýän ylmy alymalar  janly adamyň  beýnisine meňzeş kompýuter döretdi.
