+ {{Link FA|fr}}

--- a/Indoneziýa.mw
+++ b/Indoneziýa.mw
@@ -77,6 +77,8 @@ Indoneziýanyn sazy taryhy döwrün öňümidir. Gadym wagtlardan bary dil üsti
 
 [[Kategoriýa:Aziýa]]
 
+{{Link FA|fr}}
+
 [[ace:Indônèsia]]
 [[af:Indonesië]]
 [[als:Indonesien]]
