*Empty MediaWiki Message*

--- a/Şalom.mw
+++ b/Şalom.mw
@@ -1,17 +1,53 @@
+{| class="infobox bordered" style="width: 24em; text-align: left; font-size: 90%;"
+|-
+| colspan="2" style="text-align:center; font-size: large;" | '''Şalom
+'''
+|-
+| colspan="2" style="text-align:center;" | <br />'''Logo'''
+|- 
+! Garaşsyzlyk:
+| <center>[[29 oktýabr]] [[1947]]<center>
+|-
+! Druh:              
+| <center>[[Gazet]]<center>
+|-
+! Formaty:                 
+| <center>[[Tabloid]]<center>
+|-
+! Neşirýat:
+| <center>Gözlem Gazetecilik Basın ve Yayın A.Ş.<center>
+|-
+! Dili:  
+| <center>[[Türk dili]] ve [[Ladino dili]]<center>
+|-
+! Esaslandyryjy:
+| <center>Avram Leyon<center>
+|-
+! Baş redaktory:
+| <center>İvo Molinas<center>
+|-
+! Redaktory:
+| <center>Yakup Barokas<center>
+|-
+! Cena:
+| <center>[[2]] [[Türk Lirası]] [[30]] [[Kuruş]] (Hepdelik)<br /> [[120]] [[Türk Lirası]] (Ýyllyk abone)<center>
+|-
+! Ýerleşýän ýeri:
+| <center>Atiye Sokak, Polar Apt. No 12/6, 34204 Teşvikiye, [[Stambul]], [[Türkiýe]]<center>
+|-
+! Tirajy:
+| <center>5000<center>
+|- 
+! Saýty:
+| <center>[http://www.salom.com.tr/ www.salom.com.tr]<center>
+| colspan="2" style="font-size: smaller;" | 
+|}
+
 '''Şalom''' ([[İvrit dili]]: שָׁלוֹם, [[Türkmen dili]]: Parahatçylyk) — [[Stambul]], [[Türkiýe]]de neşir edilýän hepdelik bir [[gazet]].
 
-* Tirajy: 5000
-* Formaty: Tabloid
 * Sahypa sanlary: 24
-* Dili: [[Türk dili]] ve [[Ladino dili]]
 * Gazetin neşir günü: Çarşenbe
-* Gurulan ýyly: [[29 oktýabr]] [[1947]]
-* Neşirýat: Gözlem Gazetecilik Basın ve Yayın A.Ş.
-* Ýerleşýän ýeri: Atiye Sokak, Polar Apt. No 12/6, 34204 Teşvikiye, [[Stambul]], [[Türkiýe]]
-* Esaslandyryjy: Avram Leyon
-* Baş redaktory: İvo Molinas
-* Redaktory: Yakup Barokas
-* Saýty: [http://www.salom.com.tr/ www.salom.com.tr]
+
 
 == Çykgytlar ==
 * [http://www.salom.com.tr Şalom (Türk dili)]
