--- a/Şalom.mw
+++ b/Şalom.mw
@@ -8,8 +8,8 @@
 ! Garaşsyzlyk:
 | <center>[[29 oktýabr]] [[1947]]<center>
 |-
-! Druh:              
-| <center>[[Gazet]]<center>
+! Görnüş:              
+| <center>[[Hepde]]lik [[Gazet]]<center>
 |-
 ! Formaty:                 
 | <center>[[Tabloid]]<center>
@@ -29,12 +29,18 @@
 ! Redaktory:
 | <center>Yakup Barokas<center>
 |-
-! Cena:
-| <center>[[2]] [[Türk Lirası]] [[30]] [[Kuruş]] (Hepdelik)<br /> [[120]] [[Türk Lirası]] (Ýyllyk abone)<center>
+! Nyrh:
+| <center>[[2]] [[Türk Lirası]] [[30]] [[Kuruş]] (Hepdelik)<br /> [[120]] [[Türk Lirası]] (Ýyllyk ýazylysyk)<center>
 |-
 ! Ýerleşýän ýeri:
 | <center>Atiye Sokak, Polar Apt. No 12/6, 34204 Teşvikiye, [[Stambul]], [[Türkiýe]]<center>
-|-
+|- 
+! Gazetin neşir günü:
+| <center>[[Çarşenbe]]<center>
+|- 
+! Sahypa sanlary: 
+| <center>24<center>
+|- 
 ! Tirajy:
 | <center>5000<center>
 |- 
@@ -44,10 +50,6 @@
 |}
 
 '''Şalom''' ([[İvrit dili]]: שָׁלוֹם, [[Türkmen dili]]: Parahatçylyk) — [[Stambul]], [[Türkiýe]]de neşir edilýän hepdelik bir [[gazet]].
-
-* Sahypa sanlary: 24
-* Gazetin neşir günü: Çarşenbe
-
 
 == Çykgytlar ==
 * [http://www.salom.com.tr Şalom (Türk dili)]
