*Empty MediaWiki Message*

--- a/Beýik_Litwa_Knýazlygy.mw
+++ b/Beýik_Litwa_Knýazlygy.mw
@@ -1,4 +1,5 @@
-Beýik Litwa Knýazlygy [[XII/XIII asyr]]lardan başlap [[XVIII asyr|XVIII asyryň]] ahyryna çenli [[GÜndogar döwletleri|Gündogar]] we [[Merkezi Ýewropa]] döwletleri bolupdyr. Ol [[Litwa|litwalylar]] tarapyndan esaslandyrylypdy. Wagtyň geçmegi bilen bu knýazlygyň araçäklerine öňki [[Kiýew ruslary]] degişli bolupdyr. Beýik Litwa Knýazlygynyň araçäklerine häzirki [[Litwa|Litwanyň]], [[Belorussiýa|Belorussiýanyň]], [[Ukraina|Ukrainanyň]] we [[Polşa|Polşanyň]] bilen [[Orsýet|Russiýanyň]] bölekleri giripdir. Onuň bu uly araçägi, [[XV asyr]]larda, Ýewropanyň iň uly araçäkli döwleti bolupdyr.
+Beýik Litwa Knýazlygy [[12-nji asyr|12]]/[[13-nji asyr|13]]-nji asyrlardan başlap, [[18-nji asyr]]yň ahyryna çenli [[Gündogar döwletleri|Gündogar]] we [[Merkezi Ýewropa]] döwletleri bolupdyr. Ol [[Litwa|litwalylar]] tarapyndan esaslandyrylypdyr. Wagtyň geçmegi bilen bu knýazlygyň araçäklerine öňki [[Kiýew ruslary]] degişli bolupdyr. Beýik Litwa Knýazlygynyň çägine häzirki [[Litwa]]nyň, [[Belorussiýa]]nyň, [[Ukraina]]nyň we [[Polşa]]nyň hem-de [[Russiýa]]nyň käbir bölekleri giripdir. Onuň bu uly araçägi, [[15-nji asyr]]da, Ýewropanyň iň uly araçäkli döwleti bolupdyr.
+
 [[Faýl:Vytauto Didžiojo antspaudas.Royal seal of Lithuanian Grand Duke Vytautas the Great.jpg|thumb|300px|Witowtyň möhüri]]
 
 [[bat-smg:Lietovuos Dėdliuojė Konėgaikštīstė]]
