*Empty MediaWiki Message*

--- a/Tejen_etraby.mw
+++ b/Tejen_etraby.mw
@@ -1,4 +1,6 @@
- - [[Türkmenistan]]da bir etrap.
+[[Türkmenistan]]da bir etrap.
 
 [[category:Türkmenistan]]
 [[category:Türkmenistanyň etraplary]]
+
+[[en:Tejen District]]
