*Empty MediaWiki Message*

--- a/Türkmenbaşy_etraby.mw
+++ b/Türkmenbaşy_etraby.mw
@@ -1,4 +1,6 @@
- - [[Türkmenistan]]da Balkan welaýatynda ýerleşýän bir etrap.
+[[Türkmenistan]]da Balkan welaýatynda ýerleşýän bir etrap.
 
 [[category:Türkmenistan]]
 [[category:Türkmenistanyň etraplary]]
+
+[[en:Türkmenbaşy District]]
