*Empty MediaWiki Message*

--- a/Türkmenistanyň_prezidenti.mw
+++ b/Türkmenistanyň_prezidenti.mw
@@ -36,3 +36,5 @@ Berdimuhammedow dalashgarlerin biri bolup her bir etraplarda, shaherlerde oz mey
 
 [[Category:Türkmenistan]]
 [[Category:Türkmenistan syýasaty]]
+
+[[en:President of Turkmenistan]]
