*Empty MediaWiki Message*

--- a/Türkmenistanyň_telefon_kodlary.mw
+++ b/Türkmenistanyň_telefon_kodlary.mw
@@ -1,1 +1,72 @@
---[[User:85.100.198.70|85.100.198.70]] 12:16, 14 November 2007 (UTC)0099366164323''Italic text''
+== '''[[Ahal]] welaýaty''' ==
+
+Gypjak 001 392****<br>
+Bäherden 001 31*****<br>
+Gökdepe 001 32*****<br>
+Kaka 001 33*****<br>
+Sarags 001 34*****<br>
+Tejen 001 35*****<br>
+Babadaýhan 001 36*****<br>
+Änew 001 37*****<br>
+Abadan 001 38*****<br>
+
+== '''[[Balkan]] welaýaty''' ==
+
+Türkmenbaşy 002 43***** <br>
+Hazar (Çeleken) 002 40*****<br>
+Gumdag 002 41*****<br>
+Etrek (Gyzyletrek) 002 42*****<br>
+Balkanabat (Nebitdag)002 22*****<br>
+Türkmenbaşy 002 444****<br>
+Esenguly 002 45*****<br>
+Serdar (Gyzylarbat) 002 46*****<br>
+Bereket (Gazanjyk) 002 47*****<br>
+Magtymguly (Garrygala) 002 48***** <br>
+
+== '''[[Daşoguz]] welaýaty''' ==
+Daşoguz 003 22*****<br>
+Tagta 003 40*****<br>
+Ýylanly 003 43*****<br>
+Akdepe 003 44*****<br>
+Gubadag 003 45*****<br>
+Boldumsaz 003 46*****<br>
+Köneürgenç 003 47*****<br>
+Nyýazow 003 48*****<br>
+Türkmenbaşy 003 49*****<br>
+
+== '''[[Lebap]] welaýaty''' ==
+
+
+Türkmenabat (Çärjew) 004 22*****<br>
+Gowurdak 004 31*****<br>
+Nyýazow 004 32*****<br>
+Gazojak 004 38*****<br>
+Çarşaňňy 004 40*****<br>
+Halaç 004 41*****<br>
+Hojambaz 004 42*****<br>
+Garabekewül 004 43*****<br>
+Atamyrat (Kerki) 004 44*****<br>
+Darganata 004 45*****<br>
+Dänew 004 46*****<br>
+Saýat 004 47*****<br>
+Farap 004 48*****<br>
+Sakar 004 49*****<br>
+Seýdi 004 61*****<br>
+Dostluk 004 65*****<br>
+
+== '''[[Mary]] welaýaty'''==
+Mary 005 22*****<br>
+Ýagty ýol 005 57*****<br>
+Mollanepes 005 58*****<br>
+Gulanly 005 59*****<br>
+Ýolöten 005 60*****<br>
+Serhetabat (Guşgy) 005 61*****<br>
+Baýramaly 005 64*****<br>
+Murgap 005 65*****<br>
+Sakarçäge 005 66*****<br>
+Tagtabazar 005 68*****<br>
+Türkmengala 005 69*****<br>
+
+[[Category:Türkmenistan]]
+
+[[en:Telephone numbers in Turkmenistan]]
