*Empty MediaWiki Message*

--- a/Zaman.mw
+++ b/Zaman.mw
@@ -1,3 +1,5 @@
-'''Zaman''', bir [[gazet]] [[Türkmenistan]]'da.
+'''Zaman''', [[Türkmenistan]]'da bir [[gazet]].
 
 [[Category:Gazetler]]
+
+[[en:Zaman (newspaper)]]
