*Empty MediaWiki Message*

--- a/Änew.mw
+++ b/Änew.mw
@@ -1,3 +1,16 @@
 Änew şäherçesi 1973 ýylda döredildi, ilaty 14,2 müň adam. Şäherçe Ahal welaýatynyň hem-de Gäwers etrabynyn adminstratiw merkezi. Änewde geologik-gözleg ekspedisiýasynyň kontorasy, kerpiç zawody, çakyr zawody, ekerançylyk we toprak institutlary, durmuş medeni edaralar, demir ýol  stanisiýasy, gurluşyk guramalary ýerleşendir.
 [[Category:Türkmenistandaky şäherler]]
 [[Category:Ahal]]
+
+[[roa-rup:Anau]]
+[[ca:Anau]]
+[[en:Anau]]
+[[et:Änew]]
+[[es:Annau]]
+[[fr:Änew]]
+[[it:Änew]]
+[[lt:Anau]]
+[[pl:Änew]]
+[[pt:Anev]]
+[[ro:Änew]]
+[[tr:Anev]]
