*Empty MediaWiki Message*

--- a/Absolýut_goşmaça_gymmat.mw
+++ b/Absolýut_goşmaça_gymmat.mw
@@ -1,3 +1,5 @@
 '''Absolýut goşmaça gymmat''' - goçmaça gymmat öndürmegiň bir görnüşi, kapitalistik kärhanalarda iş gününi uzaltmagyň hasabyna alynýan goşmaça gymmat. Karl Marksyň görkezişi ýaly, kapitalistik önümçilik diňe bir haryt öndürmek bolman, eýsem ol öz asyl manysy boýunça, goşmaça gymmat öndürmekdir. Goşmaça gymmat öndürmegiň, esasan, iki usuly: absolýut w e ''otnositel goşmaça gymmat'' öndürmek usuly bar. "İş gününi uzaldyp, işçiniň öz işçi güýjüniň gymmatlygynyň diňe ekwiwalentini öndürip bilýän çäklerinden çykarylmagy we bu goşmaça zähmetiň kapital tarapyndan eýelenmegi - absolýut goşmaça gymmatyň öndürilişi ine şundan ybaratdyr. Absolýut goşmaça gymmatyň öndürilmegi kapitalistik sistemanyň ähliumumy, esasy we otnositel goşmaça gymmatyň öndürilmeginiň ugur alyş punkty bolup durýar" ([[Karl Marks]], Kapital, 1-nji tom, 1 kitap, TDN, [[Aşgabat]] 1962, 555-556 sahypalar). 
 
 [[Category:Ykdysadyýet]]
+
+[[ru:Прибавочная стоимость]]
