*Empty MediaWiki Message*

--- a/Abuna_ýazylyşyk.mw
+++ b/Abuna_ýazylyşyk.mw
@@ -1,1 +1,3 @@
 '''Abuna ýazylyşyk'''- döwürleýin neşirlerde öňünden ýazylmak bilen belli bir döwür içinde olary üstüňe getirip bermek hyzmatyndan peýdalanmaga bolan hukuk. Bu sistema abunaçylara ýazylyp alýan neşirleriniň öz wagtynda we sanma-san gowşurylmagyny kepillendirýär. Ol döwürleýin neşirleri ýaýratmagyň iý esasy formasy bolmak bilen, redaksiýalara öz okyjylar aktiwini döretmäge, kadaly işlemäge kömek edýär.
+
+[[ru:Подписка]]
