robot üýtgetdi: [[cs:AJAX]]

--- a/Ajax_(programmirleme).mw
+++ b/Ajax_(programmirleme).mw
@@ -15,7 +15,7 @@ Ajax - web server softweyrinden garassyz browser tehnologiyasydyr.
 [[bg:AJAX]]
 [[bn:এজ্যাক্স (ওয়েব প্রোগ্রামিং কৌশল)]]
 [[ca:Ajax (programació)]]
-[[cs:Asynchronous JavaScript and XML]]
+[[cs:AJAX]]
 [[da:Ajax (programmering)]]
 [[de:Ajax (Programmierung)]]
 [[en:Ajax (programming)]]
