--- a/Hajettepe_uniwersiteti.mw
+++ b/Hajettepe_uniwersiteti.mw
@@ -6,6 +6,7 @@
 
 [[de:Hacettepe-Universität]]
 [[en:Hacettepe University]]
+[[pl:Uniwersytet Hacettepe]]
 [[sv:Hacettepe universitet]]
 [[tr:Hacettepe Üniversitesi]]
 [[ug:ھاجەتتەپە ئۇنىۋرېستېتى]]
