robot üýtgetdi: [[pt:Benim]]

--- a/Benin.mw
+++ b/Benin.mw
@@ -169,7 +169,7 @@ Benin Günbatar Afrikada ýerleşýän döwlet.
 [[pms:Benin]]
 [[pnb:بنین]]
 [[ps:بېنين]]
-[[pt:Benin]]
+[[pt:Benim]]
 [[qu:Binin]]
 [[rm:Benin]]
 [[ro:Benin]]
