--- a/Türkmen_dili.mw
+++ b/Türkmen_dili.mw
@@ -24,6 +24,11 @@ Daşlary syndyrar, ýoly baglanmaz,<br />
 Gözüm gaýra düşmez, köňül eglenmez,<br />
 Magtymguly, sözlär tili türkmeniň<br />
 
+Sarhoş olup çıkar, ciğer dağlanmaz,<br />
+Taşları sindirir, yolu bağlanmaz,<br />
+Gözüme kayra düşmez, gönül eğlenmez,<br />
+Mahdumkulu söyler dilin Türkmenin. <br />
+
 == Käbir goýberilýän ýalňyşlyklar ==
 meň däl meniň
 şumat däl şu wagt
