*Empty MediaWiki Message*

--- a/Ýaşylbaş.mw
+++ b/Ýaşylbaş.mw
@@ -24,3 +24,59 @@
 * ''A. p. diazi'' Ridgway, [[1886]]
 | range map = Anas platyrhynchos distribution map.png
 }}
+
+[[ar:بط بري]]
+[[az:Yaşılbaş ördək]]
+[[bat-smg:Dėdliuojė pīlė]]
+[[bg:Зеленоглава патица]]
+[[br:Houad-korz]]
+[[ca:Ànec collverd]]
+[[cs:Kachna divoká]]
+[[cy:Hwyaden Wyllt]]
+[[da:Gråand]]
+[[de:Stockente]]
+[[el:Αγριόπαπια]]
+[[en:Mallard]]
+[[eo:Platbeka anaso]]
+[[es:Anas platyrhynchos]]
+[[et:Sinikael-part]]
+[[eu:Basahate]]
+[[fa:کله‌سبز]]
+[[fi:Sinisorsa]]
+[[fr:Canard colvert]]
+[[fy:Wylde Ein]]
+[[gd:Tunnag fhiadhaich]]
+[[gl:Lavanco]]
+[[he:ברכיה (עוף)]]
+[[hr:Divlja patka]]
+[[hu:Tőkés réce]]
+[[is:Stokkönd]]
+[[it:Anas platyrhynchos]]
+[[ja:マガモ]]
+[[kl:Qeerlutooq]]
+[[ko:청둥오리]]
+[[kv:Горда]]
+[[la:Anas platyrhynchos]]
+[[lt:Didžioji antis]]
+[[mr:मलार्ड बदक]]
+[[ms:Itik Melewar]]
+[[nah:Zōlcanauhtli]]
+[[nl:Wilde eend]]
+[[nn:Stokkand]]
+[[no:Stokkand]]
+[[pl:Kaczka krzyżówka]]
+[[pt:Pato-real]]
+[[sah:Хара көҕөн]]
+[[se:Duoršu]]
+[[sh:Divlja patka]]
+[[simple:Mallard]]
+[[sk:Kačica divá]]
+[[sl:Mlakarica]]
+[[sr:Дивља патка]]
+[[sv:Gräsand]]
+[[tl:Papaw]]
+[[tr:Yeşilbaş]]
+[[uk:Крижень]]
+[[vi:Vịt cổ xanh]]
+[[zh:绿头鸭]]
+[[zh-min-nan:Kim-thâu-á]]
