The file [[:Image:Wasscherscheiden.png]] has been replaced by [[:Image:Europäische_Wasserscheiden.png]] by administrator [[:commons:User:MGA73]]: ''File renamed''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Taraz.mw
+++ b/Taraz.mw
@@ -1,4 +1,4 @@
-[[Image:Wasscherscheiden.png|thumb|300px|Basseýnleri (çal regionlar) bölüp aýyrýan esasy [[Ýewropa]] tarazlary (gyzyl liniýalar)]]
+[[Image:Europäische_Wasserscheiden.png|thumb|300px|Basseýnleri (çal regionlar) bölüp aýyrýan esasy [[Ýewropa]] tarazlary (gyzyl liniýalar)]]
 '''Taraz''' iki ýa-da birnäçe derýanyň, kölüň, deňziň ýa-da okeanyň suw ýygnaýjy basseýnlerini bölüp aýyrýan ýerüsti şertli topografiki liniýa bolup durýar.  
 
 [[ar:حاجز مائي]]
