--- a/Anton_Çehow.mw
+++ b/Anton_Çehow.mw
@@ -1,1 +1,81 @@
 1860-njy ýylda doglup 1904-nji ýylda Germaniýada aradan çykan beýik rus ýazyjysy. Ýaşlykdan güzeran üçin dürli žurnallarda satiriki hekaýalar ýazyp başlaýar. Gazananja galam hakyny bolsa Azow deňiziniň kenaryndaky Taganrog şäherinden Moskwada ýaşap ýören ene-atasyna ugradýar. Sebäbi kakasy öň özüniň ýakyn dostuna kömek etjek bolup ykdysady krizise sezewar bolupdy. Şol sebapli hem Taganrogdan Moskwa göçmeli bolupdylar. Anton Çehow 1878-nji ýylda lukmançylyk institutyna okuwa girýär. 1884-njy ýylda okuwy tamamlap zwenogorod keselhanasynda lukman bolup işe başlaýar. Edil şol ýyl hem ilkinji eseri çap edilip başlanýar.
+[[am:አንቷን ቼኾቭ]]
+[[ar:أنطون تشيخوف]]
+[[an:Anton Chekhov]]
+[[ast:Anton Chekhov]]
+[[az:Anton Çexov]]
+[[bn:আন্তন চেখভ]]
+[[zh-min-nan:Anton Pavlovich Chekhov]]
+[[bs:Anton Pavlovič Čehov]]
+[[br:Anton Tchec'hov]]
+[[bg:Антон Чехов]]
+[[ca:Anton Txékhov]]
+[[cv:Чехов Антон Павлович]]
+[[cs:Anton Pavlovič Čechov]]
+[[cy:Anton Chekhov]]
+[[da:Anton Tjekhov]]
+[[de:Anton Pawlowitsch Tschechow]]
+[[et:Anton Tšehhov]]
+[[el:Αντόν Τσέχωφ]]
+[[es:Antón Chéjov]]
+[[eo:Anton Ĉeĥov]]
+[[eu:Anton Txekhov]]
+[[fa:آنتون چخوف]]
+[[hif:Anton Chekhov]]
+[[fr:Anton Tchekhov]]
+[[fy:Anton Tsjechov]]
+[[gl:Anton Chekhov]]
+[[ko:안톤 체호프]]
+[[hi:आंतोन चेखव]]
+[[hr:Anton Pavlovič Čehov]]
+[[io:Anton Chehov]]
+[[id:Anton Chekhov]]
+[[is:Anton Tsjekhov]]
+[[it:Anton Čechov]]
+[[he:אנטון צ'כוב]]
+[[ka:ანტონ ჩეხოვი]]
+[[sw:Anton Chekhov]]
+[[ku:Anton Çexov]]
+[[la:Antonius Tsechov]]
+[[lv:Antons Čehovs]]
+[[lt:Antonas Čechovas]]
+[[lij:Anton Cekhov]]
+[[hu:Anton Pavlovics Csehov]]
+[[mk:Антон Павлович Чехов]]
+[[ml:ആന്റണ്‍ ചെഖോവ്]]
+[[mr:आंतोन चेखव]]
+[[arz:انتون تشيخوف]]
+[[mn:Антон Павлович Чехов]]
+[[nl:Anton Tsjechov]]
+[[new:एन्टोन् चेखोव]]
+[[ja:アントン・チェーホフ]]
+[[no:Anton Tsjekhov]]
+[[nn:Anton Tsjekhov]]
+[[pnb:انتون چیخوف]]
+[[pl:Anton Czechow]]
+[[pt:Anton Pavlovitch Tchékhov]]
+[[ro:Anton Cehov]]
+[[qu:Anton Chekhov]]
+[[ru:Чехов, Антон Павлович]]
+[[sah:Антон Чехов]]
+[[simple:Anton Chekhov]]
+[[sk:Anton Pavlovič Čechov]]
+[[sl:Anton Pavlovič Čehov]]
+[[ckb:ئانتۆن چیخۆف]]
+[[sr:Антон Павлович Чехов]]
+[[sh:Anton Pavlovič Čehov]]
+[[fi:Anton Tšehov]]
+[[sv:Anton Tjechov]]
+[[ta:ஆன்டன் செக்கோவ்]]
+[[te:అంటోన్ చెకోవ్]]
+[[th:อันทวน เชคอฟ]]
+[[tg:Антон Павлович Чехов]]
+[[tr:Anton Çehov]]
+[[uk:Чехов Антон Павлович]]
+[[ur:انتون چیخوف]]
+[[vi:Anton Pavlovich Chekhov]]
+[[vo:Anton Cehov]]
+[[war:Anton Chekhov]]
+[[yi:אנטאן פאוולאוויטש טשעכאוו]]
+[[bat-smg:Antuons Čechuovs]]
+[[zh:安东·帕夫洛维奇·契诃夫]]
