--- a/Indoneziýa.mw
+++ b/Indoneziýa.mw
@@ -105,6 +105,7 @@ Indoneziýanyn sazy taryhy döwrün öňümidir. Gadym wagtlardan bary dil üsti
 [[crh:İndoneziya]]
 [[cs:Indonésie]]
 [[csb:Jindonezjô]]
+[[cu:Индонєзиѩ]]
 [[cv:Индонези]]
 [[cy:Indonesia]]
 [[da:Indonesien]]
