*Empty MediaWiki Message*

--- a/Awstriýa.mw
+++ b/Awstriýa.mw
@@ -34,7 +34,7 @@ Awstriýa Respublikasy
 |}
 
 Awstriýa Respublikasy Merkezi Ýewropadaky döwlet. Ol Birinji Jahan urşundan soň Awstro-Wengriýa monarhiýasynyň dargamagy bilen döreýär. Umumy tutyan meýdany 83,9 müň inedördül kilometre barabardyr. Ýurduň günbatardan gündogara çenli uzunlygy 579 kilometrdir. Ol demirgazyk-günbatarda [[Germaniýa]], günbatarda [[Şweýsariýa]] we [[Lihtenşteýn]], günortada [[Italiýa]] we [[Sloweniýa]], gündogarda [[Slowakiýa]] bilen araçäkleşýär. Awstriýa dokuz federal ştata bölünýär.
-Olar: Burgenland, Karintiýa, Aşaky Awstriýa, Ýokarky Awstriýa, Zalsburg, Ştiriýa, Tirol, Forarlberg we Wena şäheri.
+Olar: [[Burgenland]], [[Karintiýa]], [[Aşaky Awstriýa]], [[Ýokarky Awstriýa]], [[Zalsburg]], [[Ştiriýa]], [[Tirol]], [[Forarlberg]] we [[Wena]] şäheri.
 
 
 == Tebigaty ==
