*Empty MediaWiki Message*

--- a/Türkmen_dili.mw
+++ b/Türkmen_dili.mw
@@ -12,7 +12,7 @@
 |map=}}
 
 
-'''Türkmen dili''' : Türkmenistanyň resmi dili.
+'''Türkmen dili''' : [[Türkmenistan]]yň resmi dilidir.
 
 [[Türkmen elipbiýi|Elipbiý]]
 == Taryhy ==
