*Empty MediaWiki Message*

--- a/Türkmenistanyň_prezidenti.mw
+++ b/Türkmenistanyň_prezidenti.mw
@@ -1,7 +1,7 @@
 <table>
 <tr bgcolor="#B0E0E6"><td>'''Prezidentler'''</td><td>'''Wezipede oturan wagty'''</td>
-<tr bgcolor="#FAF0E6"><td>[[Saparmyrat Türkmenbaşy|Saparmyrat Nyýazow Ataýewiç]]</td><td>[[27 Garaşsyzlyk aý]] [[1991]]–[[21 Bitaraplyk aý]] [[2006]]</td>
-<tr bgcolor="#FAF0E6"><td>[[Gurbanguly Berdimuhammedow]]</td><td>[[21 Bitaraplyk aý]] [[2006]] -[[14 Baýdak aý]] [[2007]]</td>
+<tr bgcolor="#FAF0E6"><td>[[Saparmyrat Türkmenbaşy|Saparmyrat Nyýazow Ataýewiç]]</td><td>27 [[Oktýabr|Garaşsyzlyk]] aý [[1991]]–21 [[Dekabr|Bitaraplyk]] aý [[2006]]</td>
+<tr bgcolor="#FAF0E6"><td>[[Gurbanguly Berdimuhammedow]]</td><td>21 [[Dekabr|Bitaraplyk]] aý [[2006]] -14 [[fewral|Baýdak]] aý [[2007]]</td>
 </table>
 
 ==Saparmyrat Nyýazow Ataýewiç==
