*Empty MediaWiki Message*

--- a/Gyrgyzystan.mw
+++ b/Gyrgyzystan.mw
@@ -33,7 +33,7 @@ Gyrgyz Respublikasy
 | 5.264.000<br/>&nbsp; 26/km&sup2;
 |-
 | '''[[Garaşsyzlyk]]'''
-| [[1991]] [[Bitaraplyk 25]]
+| [[25]] [[Dekabr|Bitaraplyk]] [[1991]]
 |-
 | '''[[Pul]]'''
 | [[Gyrgyz sum]]
