--- a/Dekabr.mw
+++ b/Dekabr.mw
@@ -2,7 +2,7 @@
 
 '''Dekabr''' ('''Bitaraplyk''') [[Gregorýan Kalendary]]na laýyklykda [[ýyl|ýylyň]] 31 [[gün|günlük]] ýedi aýyndan biri bolan on ikinji we iň ahyrky [[aý]]ydyr.
 
-Latynça, ''decem'' diýmeklik "[[10 (san)|on]]" diýmekligi aňladýar. Aýsyz bolan gyş pasly, Janwar we Fewral aýlary bilen hem bilünýänine çenli, Dekabr aýy [[Rim Kalendarynda]] laýyklykda onunjy aý hökmünde hasaplanýardy.
+Latynça, ''decem'' diýmeklik "[[10 (san)|on]]" diýmekligi aňladýar. Aýsyz bolan gyş pasly, [[ýanwar]] we [[Fewral]] aýlary bilen hem bilünýänine çenli, Dekabr aýy [[Rim Kalendarynda]] laýyklykda onunjy aý hökmünde hasaplanýardy.
 
 {{aý-setir}}
 
