--- a/Abhaziýa.mw
+++ b/Abhaziýa.mw
@@ -1,8 +1,8 @@
 '''Abhaziýa''' ([[Abhaz dili|Abhazça]] Аҧсны Аҳәынҭқарра - Apeny "Mähriban ýurt").
 
 == Umumy maglumaty ==
-[[Gruziýa]]nyň içine girýän [[awtonom döwlet]]. Ol 1921 ýylyň Gurbansoltan aýynyň 4-nde döredilýär. Meýdany 8,6 müň kw. km² Ilaty 250,000 . Abhaziýanyň içine 6 welaýat, 6 şäher, 3 şäherçe girýär. Paýtagty [[Suhumi]] şäheri.
- 
+[[Gruziýa]]nyň içine girýän [[awtonom döwlet]]. Ol 1921 ýylyň [[aprel|Gurbansoltan]] aýynyň 4-nde döredilýär. Meýdany 8,6 müň kw. km² Ilaty 250,000 . Abhaziýanyň içine 6 welaýat, 6 şäher, 3 şäherçe girýär. Paýtagty [[Suhumi]] şäheri.
+
 == Tebigaty ==
 Abhaziýa Kawkazlaryň demirgazyk-günbatarynda ýerleşýär, günorta-günbatar tarapy Gara deňze ýanaşýar. Abhaziýanyň gözel tebigaty bar. Abhaziýanyň teritoriýasynyň köp bölegi daglyk bolup, onda Gagra, Bzyb, Abhaziýa we beýleki dag gerişleri hem-de Kolhida pesligi bar. Türkmenbaşy aýynyň ortaça temperaturasy +4-7, daglarda +2dan -2 ýetýär. Gorkut aýynda +22-24, daglarda +18-16. Esasy derýalary - Kodori, Bzyb, Gumista. Kölleri Risa we Amtkeldir. Abhaziýada ösümlikleriň 2000 görnüşi bar. Onuň ähli meýdanynyň 55%-inden gowragyny tokaýlar tutýar. Derýalarynda we köllerinde dürli balyklar bar. Abhaziýada Risa, Gumista, Pisunda goraghanalary ýerleşýär.
 
