*Empty MediaWiki Message*

--- a/Awgust_antipartiýa_bileleşigi.mw
+++ b/Awgust_antipartiýa_bileleşigi.mw
@@ -1,1 +1,1 @@
-Awgust Antipartiýa Bileleşigi - RSDIP-niň hatarynda bozgakçylyk edýän toparlaryň we akymlaryň (troskiçileriň, likwidatorlaryň, otzowistleriň we bundçularyň) 1912 ýylyň Alp-Arslan aýynda (Awgustda) bolşewiklere garşy döreden antipartiýa bilelişigi. Bu bilelişigiň guramaçasy Troskiý bolup, ol 1912 ýylyň Alp-Arslan aýynda Wenada konferensiýa çagyrdy. Konferensiýada antibolşewistik bileleşik düzüldi. Bu bileleşigiň esasy wezipesi bolşewikler partiýasyna, onuň leninçi MK-syna garşy göreşmekden, işçileriň ünsüni rewolýusiýon göreşden sowmakdan ybaratdy. Troskiý özüniň liniýasyny aralykçylyk, ylalaşykçylyk perdesi bilen örtüp, bolşewiklere-de, menşewiklere-de degişli däldirin, diňe olary ylalaşyrýaryn diýdi. Konferensiýada ýüze çykan agzalalyklar sebäpli Polşa plehanowçylar, wperýodçylar, olaryň yzy bilen hem latyşlar bu antipartiýa bileleşikden çykdylar. Ol bileleşik bolşewikleriň uran zarbalary astynda 1913-14 ýyllarda dargadyldy.
+'''Awgust Antipartiýa Bileleşigi''' - RSDIP-niň hatarynda bozgakçylyk edýän toparlaryň we akymlaryň (troskiçileriň, likwidatorlaryň, otzowistleriň we bundçularyň) [[1912]] ýylyň [[awgust|Alp Arslan]] aýynda bolşewiklere garşy döreden antipartiýa bilelişigi. Bu bilelişigiň guramaçasy Troskiý bolup, ol 1912 ýylyň Alp-Arslan aýynda Wenada konferensiýa çagyrdy. Konferensiýada antibolşewistik bileleşik düzüldi. Bu bileleşigiň esasy wezipesi bolşewikler partiýasyna, onuň leninçi MK-syna garşy göreşmekden, işçileriň ünsüni rewolýusiýon göreşden sowmakdan ybaratdy. Troskiý özüniň liniýasyny aralykçylyk, ylalaşykçylyk perdesi bilen örtüp, bolşewiklere-de, menşewiklere-de degişli däldirin, diňe olary ylalaşyrýaryn diýdi. Konferensiýada ýüze çykan agzalalyklar sebäpli Polşa plehanowçylar, wperýodçylar, olaryň yzy bilen hem latyşlar bu antipartiýa bileleşikden çykdylar. Ol bileleşik bolşewikleriň uran zarbalary astynda 1913-14 ýyllarda dargadyldy.
