*Empty MediaWiki Message*

--- a/Garaşsyz_Döwletleriň_Arkalaşygy.mw
+++ b/Garaşsyz_Döwletleriň_Arkalaşygy.mw
@@ -1,7 +1,7 @@
 [[Faýl:Flag of the CIS.svg|right|thumb|270px|GDA]]
 [[Faýl:CIS Map.svg|right|thumb|270px|'''Garaşsyz Döwletler Arkalaşygy (GDA)]]
 
-'''Garaşsyz Döwletler Arkalaşygy (GDA)''', [[1991]] yylyn [[Oktýabr|Garaşsyzlyk]] aýynyň 21-ne guryldy.
+'''Garaşsyz Döwletler Arkalaşygy (GDA)''', [[1991]] ýylyň [[Oktýabr|Garaşsyzlyk]] aýynyň 21-ne guryldy.
 
 [[af:Gemenebes van Onafhanklike State]]
 [[an:Comunidat d'Estatos Independients]]
