*Empty MediaWiki Message*

--- a/Türkmenhowaýollary.mw
+++ b/Türkmenhowaýollary.mw
@@ -1,6 +1,6 @@
 [[Image:Turkmenistan.airlines.b757-200.ez-a014.arp.jpg|thumb|250px|Türkmenistan Howaýollaryna degişli Boeing 757]]
 [[Image:Turkmenistan.airlines.frontview.arp.jpg|thumb|250px|Türkmenistan Howaýollaryna degişli Boeing 757, önden görünişi]]
-'''Türkmenistan Howaýollary''' - Türkmenistanyn milli howayoly gullugydyr.
+'''Türkmenistan Howaýollary''' - Türkmenistanyň milli howaýoly gullugydyr.
 
 == Hakynda ==
 
@@ -53,6 +53,8 @@
 == Hyzmatlary==
 Türkmenistan Howayollary paytagt [[Aşgabat|Aşgabady]]  Yewropa we Aziya menzillerine baglayar. Onyn ahli halkara uçyşlarynda [[Boeing]] uçarlary günbatar okuwly, tejribeli pilotlar ulanyar.
 
+== Internet ==
+* www.turkmenistanairlines.com
 [[Category:Türkmenistan]]
 
 [[de:Turkmenistan Airlines]]
