*Empty MediaWiki Message*

--- a/Isgender_Zülkarneýn.mw
+++ b/Isgender_Zülkarneýn.mw
@@ -1,6 +1,6 @@
 [[Faýl:BattleofIssus333BC-mosaic-detail1.jpg|thumb|right|250px|Isgender Zülkarneýn]]
 
-'''Isgender Zülkarneýn''' ("Mégas Aléxandros", ([[grekçe]]): Ἀλέξανδρος ὁ Μέγας or Μέγας Ἀλέξανδρος,) (Aleksandr Makedonski), ([[Iňlis dili|iňlisçe]]: ''Alexander the Great''). Asyl ady [[Aleksandr III Makedoniýaly]]. 
+'''Isgender Zülkarneýn''' (([[Makedonca]]: Александар Македонски) (Aleksandr Makedonski), ([[Iňlis dili|iňlisçe]]: ''Alexander the Great''). Asyl ady [[Aleksandr III Makedoniýaly]]. 
 
 Isgenderiň hökümdarlyk titullary: Makedoniýanyň [[Basileus]]y, [[Ellin liga]]synyň [[Gegemon]]y, [[Persiýa]]nyň [[şahinşah]]y , [[Müsür]]iň [[faraon]]y we [[Aziýa]]nyň hökümdary. 
  
