*Empty MediaWiki Message*

--- a/Gruziýa.mw
+++ b/Gruziýa.mw
@@ -1,5 +1,7 @@
 '''Gruziýa Respublikasy''' (gruzinçe:საქართველო/Sakartvelo) [[Ýewropa]]'da bir ýurt.
 
+* [http://www.allgeo.org/ Allgeo.org] - Provides news and information about Georgia (english, german, russian, georgian)
+
 [[Kategoriýa:Aziýa]]
 [[Kategoriýa:Ýewropa]]
 
