--- a/Türkmenistan.mw
+++ b/Türkmenistan.mw
@@ -117,8 +117,8 @@ Himiýa senagaty has köp pudakly senagat. Ol dag-magdan himiýa, esasy himiýa,
 
 
 === Siyahatcylyk ===
-[[Faýl:Awaza city project Turkmenistan.jpg|thumb|right|250px|[[Awaza-city]], MSZ]]
-Awaza - Türkmenistanyň Milli Syýahatçylyk Zolagy (Awaza-MSZ). Hazar deňziniň gündogar kenarynda, Türkmenbaşy şäherinden 12 km günbatar tarapynda ýerleşýär. 15 iyunda 2009 - birinji 3 oteller girizildi.Hazar deňziniň Türkmenistana degişli kenarýakasy örän täsin jana şypaly ýumşak howasy we baý tebigy mümkinçilikleri bilen tapawutlanýan ekologik taýdan arassa zolakdyr. Bu taslama Türkmenistanyň diňe özünden 1 milliarddan gowrak $-ny, daşary ýurt maýa goýujylaryň 4 milliard $-ny gönükdirmek göz öňünde tutuldy. Häzirki wagtda Awa­za­nyň meýdany 1,700 gektar möçberinde kesgitlenildi.
+[[Faýl:Awaza city project Turkmenistan.jpg|thumb|right|250px|[[Awaza-city]], [[Awaza (Milli Syýahatçylyk Zolagy)|MSZ]]]]
+Awaza - [[Awaza (Milli Syýahatçylyk Zolagy)|Türkmenistanyň Milli Syýahatçylyk Zolagy]] ([[Awaza (Milli Syýahatçylyk Zolagy)|Awaza-MSZ]]). Hazar deňziniň gündogar kenarynda, Türkmenbaşy şäherinden 12 km günbatar tarapynda ýerleşýär. 15 iyunda 2009 - birinji 3 oteller girizildi.Hazar deňziniň Türkmenistana degişli kenarýakasy örän täsin jana şypaly ýumşak howasy we baý tebigy mümkinçilikleri bilen tapawutlanýan ekologik taýdan arassa zolakdyr. Bu taslama Türkmenistanyň diňe özünden 1 milliarddan gowrak $-ny, daşary ýurt maýa goýujylaryň 4 milliard $-ny gönükdirmek göz öňünde tutuldy. Häzirki wagtda Awa­za­nyň meýdany 1,700 gektar möçberinde kesgitlenildi.
 
 == Türkmenistanyň ilaty we zähmet resurslary ==
 Ilatyň sanynyň artyşy, esasan, iki sany usul bilen kesgitlenilýär. Birinji usul, bu öň ygtybarly we umumy Kabul edilen usul-ilatyň uçdantutma ýazuwynyň geçirmekden, ikinji usul bolsa, heý ilatyň köpelişini hasaplamakdan we oňa baha bermekden ybaratdyr. Ilatyň uçdantutma yazuwynyň materiallarynyň ylmy we praktiki ähmiýeti ulydyr.
