[[Special:Contributions/217.174.229.98|217.174.229.98]] ([[User talk:217.174.229.98|Çekişme]]) tarapyndan edilen özgerdişler [[User:Hanberke|Hanberke]] tarapyndan redaktirlenen soňky wersiýasyna yzyna getirildi.

--- a/Çary_Aşyrow.mw
+++ b/Çary_Aşyrow.mw
@@ -1,1 +1,1 @@
-turmeniya rahman tampo atahan
+'''Çary Aşyrow''' Türkmenistan SSR-niň halk ýazyjysy, front şahyry. Ol 1910-njy dogulýar. Beýik Watançylyk urşunyň başlanmagy bilen ol hem eline ýarag alyp söweş meýdanyna gidýär. Faşistik basybalyjylara garşy atgyr ýaragy, ötgür sözi bilen söweşýär. Şahyr urşuň ilkinji günlerinde “Gylyç al ele” atly goşgusyny ýazyp türkmen ýigitlerini ähtiýalan duşmana berk gaýtawul bermäge çagyrýar. 1942-nji ýylda “Meniň” atly şygrynda şahyr özüniň söweş meýdanyna ugraýşyny beýan edýär. Bu goşgy şahyryň, şeýle hem watan goragyna aýaga galan ähli ýigitleriň kasamy bolup ýaňlanýar. Çary Aşyrow uruş döwründe “Gahryman” balladasyny, “En şäherinde” atly poemasyny ýazýar. Şahyryň uruş döwründäki döreden eserleri has-da ynandyryjylygy bilen tapawutlanýar, munuň esasy sebäbi şahyryň hut özüniň ganly söweşleriň içinde bolup, eserlerini gözi bilen gören wakalaryny ýazýar. Ol “Ganly Saka” trilogiýasyny, “Yzçy”, “Garry Serdar”, “Ekizler” romanyny ýazýar.
