*Empty MediaWiki Message*

--- a/1020ýý.mw
+++ b/1020ýý.mw
@@ -21,6 +21,7 @@
 [[da:1020'erne]]
 [[de:1020er]]
 [[en:1020s]]
+[[eo:1020-aj jaroj]]
 [[es:Años 1020]]
 [[et:1020. aastad]]
 [[eu:1020ko hamarkada]]
