--- a/Turkmenweb.mw
+++ b/Turkmenweb.mw
@@ -9,6 +9,7 @@ http://turkmenweb.com
 [[Image:Asbhost.jpg|right|thumb|http://asbhost.com]]</br>
 [[Image:tmhits.jpg|left|thumb|http://tmhits.com]]</br>
 [[Image:Tmchat.jpg|right|thumb|http://tmchat.ru]]</br>
+[[Image:http://www.forumturkmen.com/images/titlegif2.gif|left|thumb|http://forumturkmen.com]]</br>
 
 == Seredin ==
 [http://www.turkmenweb.net/ Resmi web sahypasy]<br>
