--- a/1000–1009.mw
+++ b/1000–1009.mw
@@ -21,6 +21,7 @@
 [[da:1000'erne]]
 [[de:1000er]]
 [[en:1000–1009]]
+[[eo:1000-aj jaroj]]
 [[es:Años 1000]]
 [[et:1000. aastad]]
 [[eu:1000ko hamarkada]]
