Prezident: Bronisław Komorowski

--- a/Polşa.mw
+++ b/Polşa.mw
@@ -16,7 +16,7 @@
 | [[Warşawa]]
 |-
 | '''[[Prezident]]'''
-| [[Leh Kaçynski]]
+| [[Bronisław Komorowski]]
 |-
 | '''[[Dil]]'''
 | [[Polça|Polça dili]]
