*Empty MediaWiki Message*

--- a/Gimalaýlar.mw
+++ b/Gimalaýlar.mw
@@ -1,14 +1,111 @@
-{{dag ulgamy
-|Название = '''Гималаи'''
-|Фото = Himalaya composite.jpg
-|Комментарии = 
-|Высшая точка = г. [[Джомолунгма]] (8848 м)
-|Расположение = [[Индия]], [[Непал]], [[Китай]], [[Пакистан]], [[Бутан (государство)|Бутан]]
-|Протяжённость =  2900 км
-|Ширина = 350 км
-|Площадь = 
-|Главный хребет =
-|Период создания = [[Меловой период|меловой]]
-|Породы = [[осадочные горные породы|осадочные]], [[офиолиты]] 
-}}
-'''Гимала́и''' ({{lang-sa|हिमालय}}, {{IAST|himālaya}}, «оплот снегов», {{lang-hi|हिमालय}}, {{lang-ne|हिमालय}}, {{lang-zh|喜馬拉雅山脈}}) — высочайшая [[горная система]] [[Земля|Земли]]. Гималаи расположены между [[Тибетское нагорье|Тибетским нагорьем]] (на севере) и [[Индо-Гангская равнина|Индо-Гангской равниной]] (на юге); резко выраженный климатический и природный рубеж между горными пустынями [[Центральная Азия|Центральной Азии]] и тропическими [[ландшафт]]ами [[Южная Азия|Южной Азии]].
+'''Gimalaýlar''' ({{lang-sa|हिमालय}}, {{IAST|himālaya}}, "garly mesgen", {{lang-hi|हिमालय}}, {{lang-ne|हिमालय}}, {{lang-zh|喜馬拉雅山脈}})  [[Ýer]]iň iň beýik [[dag ulgamy]]. Gimalaýlar [[Tibet dagy]] (demirgazykda) bilen  [[Hindi-Gang tekizligi]]niň (günortada) arasynda ýerleşýär.
+
+Gimalaý daglary [[Hindistan]]yň, [[Nepal]]yň, [[Hytaý]]ýň (Tibet), [[Pakistan]]yň, [[Butan]]yň territoriýalaryna ýaýylyp gidýär.
+
+[[Kategoriýa:Gimalaýlar]]
+[[Kategoriýa:Elipbiý boýunça dag ulgamlary]]
+
+[[af:Himalaja]]
+[[als:Himalaya]]
+[[an:Himalaya]]
+[[ar:هيمالايا]]
+[[arz:هيمالايا]]
+[[ast:Himalaya]]
+[[az:Himalay dağları]]
+[[bat-smg:Hėmalajē]]
+[[be:Гімалаі]]
+[[be-x-old:Гімалаі]]
+[[bg:Хималаи]]
+[[bn:হিমালয় পর্বতমালা]]
+[[br:Himalaya]]
+[[bs:Himalaji]]
+[[ca:Himàlaia]]
+[[cs:Himálaj]]
+[[cv:Гималай тăвĕсем]]
+[[cy:Himalaya]]
+[[da:Himalaya]]
+[[de:Himalaya]]
+[[el:Ιμαλάια]]
+[[en:Himalayas]]
+[[eo:Himalajo]]
+[[es:Himalaya]]
+[[et:Himaalaja]]
+[[eu:Himalaia]]
+[[ext:Himalaya]]
+[[fa:هیمالیا]]
+[[fi:Himalaja]]
+[[fiu-vro:Himaalaja]]
+[[fo:Himalaia]]
+[[fr:Himalaya]]
+[[fy:Himalaya]]
+[[gan:喜馬拉雅山脈]]
+[[gl:Himalaia]]
+[[gu:હિમાલય]]
+[[he:הימלאיה]]
+[[hi:हिमालय]]
+[[hif:Himalaya]]
+[[hr:Himalaja]]
+[[hu:Himalája]]
+[[id:Pegunungan Himalaya]]
+[[io:Himalaya]]
+[[is:Himalajafjöll]]
+[[it:Himalaya]]
+[[ja:ヒマラヤ山脈]]
+[[jv:Himalaya]]
+[[ka:ჰიმალაი]]
+[[kaa:Gimalay tawları]]
+[[kk:Һималай]]
+[[kn:ಹಿಮಾಲಯ]]
+[[ko:히말라야 산맥]]
+[[krc:Гималайла]]
+[[ku:Hîmalaya]]
+[[kw:Himalayas]]
+[[la:Himalaia]]
+[[lb:Himalaya]]
+[[lmo:Himalaya]]
+[[lt:Himalajai]]
+[[lv:Himalaji]]
+[[mk:Хималаи]]
+[[ml:ഹിമാലയം]]
+[[mn:Гималайн нуруу]]
+[[mr:हिमालय]]
+[[ms:Himalaya]]
+[[my:ဟိမဝန္တာ တောင်တန်း]]
+[[ne:हिमालय]]
+[[new:हिमालय]]
+[[nl:Himalaya]]
+[[nn:Himalaya]]
+[[no:Himalaya]]
+[[nv:Dziłgaiitsoh Honeezkʼazii]]
+[[oc:Imalaia]]
+[[pl:Himalaje]]
+[[pms:Himalaya]]
+[[pt:Himalaia]]
+[[qu:Himalaya]]
+[[ro:Himalaya]]
+[[sa:हिमालय]]
+[[sah:Хималайа]]
+[[scn:Himalaya]]
+[[sh:Himalaja]]
+[[simple:Himalaya]]
+[[sk:Himaláje]]
+[[sl:Himalaja]]
+[[sq:Himalajet]]
+[[sr:Хималаји]]
+[[stq:Himalaya]]
+[[sv:Himalaya]]
+[[sw:Himalaya]]
+[[szl:Himalaje]]
+[[ta:இமயமலை]]
+[[te:హిమాలయాలు]]
+[[tg:Ҳимолой]]
+[[th:เทือกเขาหิมาลัย]]
+[[tl:Himalaya]]
+[[tr:Himalaya Dağları]]
+[[ug:ھىمالايا تاغ تىزمىسى]]
+[[uk:Гімалаї]]
+[[vi:Himalaya]]
+[[war:Himalaya]]
+[[yo:Himalaya]]
+[[zh:喜马拉雅山脉]]
+[[zh-yue:喜馬拉雅山]]
